<resources>
    <string name="app_name">MayMo</string>
    <string name="hint_username">Masukkan username</string>
    <string name="hint_password">Masukkan password</string>
    <string name="hint_email">Masukkan email</string>
    <string name="hint_confirm_password">Konfirmasi password</string>
    <string name="checkbox_register">Saya telah mengisi data dengan benar</string>
    <string name="btn_login">Login</string>
    <string name="btn_google">Google</string>
    <string name="btn_daftar">Daftar</string>
    <string name="tv_no_account">Tidak memiliki akun?</string>
    <string name="tv_other_login">Atau login dengan</string>
    <string name="tv_tips_header">Tips mengelola keuangan!</string>
    <string name="tv_tips">Berdasarkan penghasilan anda, anda harus mengaplikasikan 50:30:20 rule.</string>
    <string name="tv_tips_1">50% <b>(50XX)</b> digunakan untuk membayar tagihan bulanan dan kebutuhan pokok. Misalnya seperti listrik, belanja bulanan, cicilan, serta biaya transportasi.</string>
    <string name="tv_tips_2">30% <b>(30XX)</b> sebagai dana fleksibel. Sehingga barang yang anda inginkan tetapi tidak esensial dapat dibeli dengan budget ini. Contohnya Anda bisa menggunakan dana fleksibel untuk membeli baju, menonton bioskop, atau bepergian.</string>
    <string name="tv_tips_3">20% <b>(20XX)</b> dialokasikan untuk mencapai tujuan finansial Anda yaitu investasi, tabungan, dan asuransi. Sehingga Anda memiliki dana yang dapat dipakai saata keadaan terdesak atau memenuhi impian Anda.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_greetings">Selamat pagi!</string>
    <string name="app_desc"><b>MayMo</b> adalah sebuah aplikasi yang dapat membantu Anda dalam mengelola keuangan, mencatata semua data keuangan, dan mengingatkan Anda agar tidak lupa membuat laporan keuangan dalam setiap harinya.</string>
    <string name="welcome">Selamat datang di aplikasi MayMo!</string>
    <string name="mengerti">Mengerti</string>
    <string name="btn_survey_ya">Ya</string>
    <string name="btn_survey_tidak">Tidak</string>
    <string name="input_pemasukan">Berapa pemasukan bulanan (rutinan) anda?</string>
    <string name="hint_pemasukan">RpX.XXX.XXX</string>
    <string name="btn_pemasukan">Simpan</string>
    <string name="dana_pokok">Dana Pokok</string>
    <string name="dana_pokok_instruksi">(Silakan pilih jenis dana pokok yang Anda inginkan)</string>
    <string name="dana_pokok_deskripsi">Dana pokok digunakan untuk membayar tagihan bulanan dan kebutuhan pokok. Misalnya seperti listrik, belanja bulanan, cicilan, serta biaya transportasi.</string>
    <string name="ok">ok</string>
    <string name="app_logo">app_logo</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pilih_icon">Pilih Icon</string>
    <string name="kategori">Kategori</string>
    <string name="profil">Profil</string>
    <string name="belanja">Belanja</string>
    <string name="input_transaksi">Masukkan nominal transaksi</string>
    <string name="dalam_pengembangan">Dalam Pengembangan</string>
</resources>