<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".one.TipsAct"
    android:paddingHorizontal="32dp">

    <LinearLayout
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:orientation="vertical"
        android:layout_marginTop="184dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_tips_header"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:justificationMode="inter_word"
            android:text="@string/tv_tips"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_rule50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:paddingLeft="16dp"
            android:text="@string/tv_tips_1"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_rule30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:paddingLeft="16dp"
            android:text="@string/tv_tips_2"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_rule20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:paddingLeft="16dp"
            android:text="@string/tv_tips_3"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Ok"
        app:layout_constraintTop_toBottomOf="@id/tips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="ok"/>

</androidx.constraintlayout.widget.ConstraintLayout>