<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".one.LoginAct"
        android:paddingHorizontal="32dp"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/image"
            android:contentDescription="@string/app_logo"
            android:layout_width="100dp"
            android:layout_height="105dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="128dp"/>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            -->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:textSize="16sp"
            android:background="@drawable/edit_text"
            android:textColor="@color/black"
            android:textColorHint="#80000000"/>

        <EditText
            android:id="@+id/password"
            android:autofillHints="password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="#80000000"
            android:background="@drawable/edit_text"/>

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:padding="16dp"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            tools:ignore="TextContrastCheck" />

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_Login"
            app:layout_constraintBottom_toTopOf="@id/btn_Google"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <Button
            android:id="@+id/btn_Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/button"
            android:padding="16dp"
            android:text="@string/btn_google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_Login"
            tools:ignore="TextContrastCheck" />

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_Login"
            app:layout_constraintBottom_toTopOf="@id/btn_Google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_other_login"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            />

        <LinearLayout
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_Google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_no_account"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_Daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_daftar"
                android:textColor="@color/dark_green"
                android:textAllCaps="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="16sp"
                android:background="@null"
                android:layout_marginStart="8dp"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>