<?xml version="1.0" encoding="utf-8"?>
<layout >
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".one.CategoryItem"
    android:paddingHorizontal="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/category_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:background="@drawable/edit_text"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_category_head"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dana_pokok"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_category_instruction"
            app:layout_constraintTop_toBottomOf="@id/tv_category_head"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dana_pokok_instruksi"
            android:textSize="11sp"
            android:textStyle="italic"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_category_description"
            app:layout_constraintTop_toBottomOf="@id/tv_category_instruction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dana_pokok_deskripsi"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"/>

        <ImageView
            android:id="@+id/category_background"
            app:layout_constraintTop_toTopOf="@id/rv_category"
            app:layout_constraintBottom_toBottomOf="@id/rv_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/persen_50"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            app:layout_constraintTop_toBottomOf="@id/tv_category_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/category_item"
            tools:itemCount="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_ok"
        app:layout_constraintTop_toBottomOf="@id/category_container"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@drawable/button"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>