<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".one.KategoriFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/bg_navbar"
        android:backgroundTint="@color/light_orange"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"/>

        <TextView
            android:id="@+id/tv_judul"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="28dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="22dp">

        <Button
            android:id="@+id/btn_pengeluaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button"
            android:minWidth="140dp"
            android:minHeight="48dp"
            android:paddingHorizontal="28dp"
            android:paddingVertical="12dp"
            android:text="@string/pengeluaran"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_pemasukan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/button"
            android:minWidth="140dp"
            android:minHeight="48dp"
            android:paddingHorizontal="28dp"
            android:paddingVertical="12dp"
            android:text="@string/pemasukan"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
        
    </LinearLayout>

    <FrameLayout
        android:id="@+id/kategori_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>